--- a/themes/zephyr/front-end/src/components/component-our-team/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-team/style.scss
@@ -66,57 +66,62 @@ section.component-our-team {
                             height: 100%;
                             width: 100%;
                             object-fit: contain;
-                            @include min-medium-screen {
-                                margin-left: size(20);
+                        }
+                        
+                        .animated-circle{
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            top: 0;
+                            left: 0;
+                            background-size: auto!important;
+                            &.milky-circle {
+                                background-image: url('./../../html/images/rectangle.png'), url('./../../html/images/milky-circle.png');
+                                background-position: right 56%, 6% 43%;
+                                background-repeat: no-repeat;
+                                background-size: 67px 67px;
+                                @include min-medium-screen {
+                                    background: url('./../../html/images/milky-circle.png') no-repeat left 58%;
+                                    background-size: auto;
+                                }
                             }
-                        }
-                        
-                        &.milky-circle {
-                            background-image: url('./../../html/images/rectangle.png'), url('./../../html/images/milky-circle.png');
-                            background-position: right 56%, 6% 43%;
-                            background-repeat: no-repeat;
-                            background-size: 67px 67px;
-                            @include min-medium-screen {
-                                background: url('./../../html/images/milky-circle.png') no-repeat left 58%;
-                                background-size: auto;
+    
+                            &.oval {
+                                background: url('./../../html/images/oval.png') no-repeat 90% 30%;
+                                background-size: 115px 112px;
+                                @include min-medium-screen {
+                                    background-size: auto;
+                                    background-position: top left;
+                                }
                             }
-                        }
-                        
-                        &.oval {
-                            background: url('./../../html/images/oval.png') no-repeat 90% 30%;
-                            background-size: 115px 112px;
-                            @include min-medium-screen {
-                                background-size: auto;
-                                background-position: top left;
+    
+                            &.rectangle {
+                                background: url('./../../html/images/rectangle.png') right 60% no-repeat;
                             }
-                        }
-                        
-                        &.rectangle {
-                            background: url('./../../html/images/rectangle.png') right 60% no-repeat;
-                        }
-                        
-                        &.red-circle {
-                            background: url('./../../html/images/red-circle.png') no-repeat right 67%;
-                            background-size: 63px 63px;
-                            @include min-medium-screen {
-                                background-size: auto;
+    
+                            &.red-circle {
+                                background: url('./../../html/images/red-circle.png') no-repeat right 67%;
+                                background-size: 63px 63px;
+                                @include min-medium-screen {
+                                    background-size: auto;
+                                }
                             }
-                        }
-                        
-                        &.green-circle {
-                            background: url('./../../html/images/green-circle.png') no-repeat 56% 45%;
-                            background-size: 63px 63px;
-                            @include min-medium-screen {
-                                background-position: 20% 35%;
-                                background-size: auto;
+    
+                            &.green-circle {
+                                background: url('./../../html/images/green-circle.png') no-repeat 56% 45%;
+                                background-size: 63px 63px;
+                                @include min-medium-screen {
+                                    background-position: 20% 35%;
+                                    background-size: auto;
+                                }
                             }
-                        }
-                        
-                        &.big-green-circle {
-                            background: url('./../../html/images/big-green-cricle.png') no-repeat right 40%;
-                            background-size: 80px 80px;
-                            @include min-medium-screen {
-                                background-size: auto;
+    
+                            &.big-green-circle {
+                                background: url('./../../html/images/big-green-cricle.png') no-repeat right 40%;
+                                background-size: 80px 80px;
+                                @include min-medium-screen {
+                                    background-size: auto;
+                                }
                             }
                         }
                     }
