--- a/themes/zephyr/front-end/src/styles/_fonts.scss
+++ b/themes/zephyr/front-end/src/styles/_fonts.scss
@@ -2,14 +2,14 @@
 
 @font-face {
     font-family: $Sailec;
-    src: url('./fonts/sailecRegular.otf') format('otf');
+    src: url('./fonts/sailecRegular.otf') format('opentype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: $Sailec;
-    src: url('./fonts/sailecMedium.otf') format('otf');
+    src: url('./fonts/sailecMedium.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -19,14 +19,14 @@
 
 @font-face {
     font-family: $Canela;
-    src: url('./fonts/canelaLight.otf') format('otf');
+    src: url('./fonts/canelaLight.otf') format('opentype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: $Canela;
-    src: url('./fonts/canelaLightItalic.otf') format('otf');
+    src: url('./fonts/canelaLightItalic.otf') format('opentype');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
