remove line-break
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-about-us/style.scss
+++ b/themes/zephyr/front-end/src/components/component-about-us/style.scss
@@ -57,7 +57,7 @@ section.component-about-us {
                 }
                 
                 .paragraph-1 {
-                    line-break: anywhere;
+                    text-align: justify;
                     border-top: 1px solid #979797;
                     padding-top: size(17);
                     padding-right: size(20);
