text color from black to gray

--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -215,7 +215,7 @@ section.component-hero-home {
             }
     
             .paragraph,p,.headline-6 {
-                color: $zephyr-black;
+                color: $zephyr-gray;
             }
         }
         
