--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -61,7 +61,7 @@ header {
         .header-content {
             .links {
                 .small-link {
-                    color: $zephyr-black;
+                    color: $zephyr-gray;
                 }
                 
                 .has-drop-down .drop-down {
