--- a/themes/zephyr/front-end/src/components/component-hero-general/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-general/style.scss
@@ -161,7 +161,7 @@ section.component-hero-general {
             }
     
             .paragraph,p,.headline-6 {
-                color: $zephyr-black;
+                color: $zephyr-gray;
             }
         }
         
