--- a/themes/zephyr/front-end/src/styles/layouts/_quform_form.scss
+++ b/themes/zephyr/front-end/src/styles/layouts/_quform_form.scss
@@ -2,7 +2,7 @@
     width: 100%;
     
     .quform-label-text {
-        color: $zephyr-black;
+        color: $zephyr-gray;
         //font-family: $proxima-nove;
         font-size: size(18);
         font-weight: 600;
@@ -27,7 +27,7 @@
         @include paddingX(size(12));
         border: 1px solid #9899a2;
         outline: none;
-        color: $zephyr-black;
+        color: $zephyr-gray;
         //font-family: $Sailec;
         font-size: size(18);
         font-weight: 600;
@@ -37,7 +37,7 @@
         border-radius: 0;
         
         &::placeholder {
-            color: $zephyr-black;
+            color: $zephyr-gray;
             //font-family: $Sailec;
             font-size: 18px;
             font-weight: 600;
