--- a/themes/zephyr/front-end/src/components/footer-component/style.scss
+++ b/themes/zephyr/front-end/src/components/footer-component/style.scss
@@ -112,7 +112,7 @@ footer {
             
             span {
               position: relative;
-              transition: color 0.3s ease-in-out;
+              transition: color 0.3s;
               display: block;
               
               //&:before {
