--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -183,7 +183,7 @@ section.component-hero-home {
                 margin-bottom: 0;
             }
             .headline-1, h1 {
-                max-width: size(320);
+                width: 103%;
                 margin: 0 auto;
                 color: $zephyr-gray;
                 margin-bottom: 0;
