--- a/themes/zephyr/front-end/src/components/component-our-journey/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-journey/style.scss
@@ -84,7 +84,7 @@ section.component-our-journey {
                     align-items: center;
                     justify-content: center;
                     flex-wrap: wrap;
-                    padding: 0 30px;
+                    padding: 0;
                     .swiper-pagination-bullet{
                         margin: size(12);
                     }
